# hipocampo-memory

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  PLAN.md  PUBLISHING.md  README.md  README.pt-BR.md  brain.config.example.toml  brain.config.toml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  tests.yml
docs/: ARCHITECTURE.md  quality-analysis-2026-06.md
docs/brain/: README.md  capture.md  context-budget.md  log.md
hipocampo/: __init__.py  agents.py  canary.py  config.py  frontmatter.py  gate.py  globs.py  inbox_decay.py  index.py  mdutil.py  normalize.py  preflight.py  reflection.py  release.py  search.py  semantic.py  vault.py  views.py
hipocampo/hooks/: __init__.py  capture_sweep.py  ensure_githooks.py  session_start.py
hipocampo/tests/: coverage_report.py  test_canary.py  test_catalog_sync.py  test_config.py  test_doc_links.py  test_feature_doc_sync.py  test_frontmatter.py  test_gate.py  test_globs.py  test_hooks.py  test_inbox_decay.py  test_index.py  test_mdutil.py  test_normalize.py  test_preflight.py  test_reflection.py  test_release.py  test_router_lint.py  test_search.py  test_semantic.py  test_skills.py  test_templates.py  test_vault_sync.py  test_views.py
hipocampo/validators/: __init__.py  _git.py  catalog_sync.py  doc_links.py  feature_doc_sync.py  router_lint.py  vault_sync.py  views_fresh.py
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
templates/: README.md  gitignore
templates/ci/: agent-docs.yml
templates/githooks/: pre-commit  (+1 more)
(+52 files in other folders)
